@@ -36,7 +36,7 @@ class HomeControllerGeneratorTest < Rails::Generators::TestCase
     end
   end
 
-  test "adds engine and home route to routes" do
+  test "adds home route to routes" do
     run_generator
     assert_file "config/routes.rb" do |routes|
       assert_match "mount ShopifyApp::Engine, at: '/'", routes
