@@ -2,18 +2,17 @@ require 'test_helper'
 require 'action_controller'
 require 'action_controller/base'
 
-class WebhooksController < ActionController::Base
-  include ShopifyApp::WebhooksController
+class WebhookVerificationController < ActionController::Base
+  include ShopifyApp::WebhookVerification
   def carts_update
     head :ok
   end
 end
 
-class WebhooksControllerTest < ActionController::TestCase
-  tests WebhooksController
+class WebhookVerificationTest < ActionController::TestCase
+  tests WebhookVerificationController
 
   setup do
-    ShopifyApp::SessionRepository.storage = InMemorySessionStore
     ShopifyApp.configure do |config|
       config.secret = 'secret'
     end
@@ -45,7 +44,7 @@ class WebhooksControllerTest < ActionController::TestCase
   def with_application_test_routes
     with_routing do |set|
       set.draw do
-        get '/carts_update' => 'webhooks#carts_update'
+        get '/carts_update' => 'webhook_verification#carts_update'
       end
       yield
     end
